--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Mis Contactos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-button expand="block" routerLink="/add-contact">Agregar Contacto</ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list *ngIf="contacts.length > 0; else sinContactos">
+    <ion-item *ngFor="let contact of contacts">
+      {{ contact.nombre }} {{ contact.apellido }} - {{ contact.telefono }}
+    </ion-item>
+  </ion-list>
+
+  <ng-template #sinContactos>
+    <p>No tienes contactos aún.</p>
+  </ng-template>
 </ion-content>
