--- a/src/app/pages/add-contact/add-contact.page.html
+++ b/src/app/pages/add-contact/add-contact.page.html
@@ -1,16 +1,21 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Agregar Contacto</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Agregar Contacto</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="stacked">Número de Teléfono</ion-label>
+        <ion-input [(ngModel)]="phoneNumber" type="tel"></ion-input>
+      </ion-item>
 
-<ion-content class="ion-padding">
-  <ion-item>
-    <ion-label position="floating">Número de Teléfono</ion-label>
-    <ion-input type="text" [(ngModel)]="phoneNumber"></ion-input>
-  </ion-item>
+      <ion-button expand="block" color="primary" (click)="addContact()">
+        Agregar Contacto
+      </ion-button>
 
-  <ion-button expand="block" (click)="addContact()" [disabled]="!phoneNumber">
-    Agregar Contacto
-  </ion-button>
+      <ion-button expand="block" color="medium" (click)="testConsultaFirestore()">
+        🔍 Test Firestore Query
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
