Login, creacion usuario, añadir contacto

--- a/src/app/pages/add-contact/add-contact.page.html
+++ b/src/app/pages/add-contact/add-contact.page.html
@@ -1,21 +1,20 @@
+<!-- add-contact.page.html -->
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Agregar Contacto</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Agregar Contacto</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-item>
-        <ion-label position="stacked">Número de Teléfono</ion-label>
-        <ion-input [(ngModel)]="phoneNumber" type="tel"></ion-input>
-      </ion-item>
+  <ion-item>
+    <ion-label position="floating">Nombre</ion-label>
+    <ion-input [(ngModel)]="name" type="text"></ion-input>
+  </ion-item>
 
-      <ion-button expand="block" color="primary" (click)="addContact()">
-        Agregar Contacto
-      </ion-button>
+  <ion-item>
+    <ion-label position="floating">Teléfono</ion-label>
+    <ion-input [(ngModel)]="phone" type="text"></ion-input>
+  </ion-item>
 
-      <ion-button expand="block" color="medium" (click)="testConsultaFirestore()">
-        🔍 Test Firestore Query
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
+  <ion-button expand="full" (click)="onSubmit()">Agregar Contacto</ion-button>
 </ion-content>
