--- a/src/app/pages/video-call/video-call.page.html
+++ b/src/app/pages/video-call/video-call.page.html
@@ -4,10 +4,12 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">video-call</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <iframe
+    [src]="jitsiUrl"
+    width="100%"
+    height="100%"
+    allow="camera; microphone; fullscreen"
+    style="border:0"
+  ></iframe>
 </ion-content>
